--- a/springboot-crud-rest-app/src/main/resources/public/index.html
+++ b/springboot-crud-rest-app/src/main/resources/public/index.html
@@ -2784,7 +2784,31 @@ $scope.updateVenBilledTrip =function(data){
 	$scope.deleteRowItem = function(index){
 		$scope.manpower.splice(index,1);
 	}
-	
+	 $scope.initmpcustList =function(){
+		 $scope.mpCustomerlist=[];
+		 var url=localurl +"/api/v1/customerlist";
+		 $http({
+			    method : 'GET',
+			    url : url,
+			   }).then(function successCallback(response) {
+			   $scope.mpCustomerlist=response.data;
+			   }, function errorCallback(response) {
+			    console.log(response.statusText);
+			   });
+	 }
+	 
+	 $scope.initmpvenList =function(){
+		 $scope.mpVendorlist=[];
+			 var url=localurl +"/api/v1/vendorlist";
+			 $http({
+				    method : 'GET',
+				    url : url,
+				   }).then(function successCallback(response) {
+					   $scope.mpVendorlist=response.data;
+				   }, function errorCallback(response) {
+				    console.log(response.statusText);
+				   });
+		 }
 
 	$scope.navRedirect =function(event){
 		 $(".nav").find(".active").removeClass("active");
@@ -2834,6 +2858,19 @@ $scope.updateVenBilledTrip =function(data){
 			  $scope.getCustVenListmanPower();
 			  $scope.getItem();
 			 $scope.grandTotalList={totaltrip:"",customername:"",invoiceNo:"",truckno:"",trucktype:"",totalkm:0,totalcase:0,totalkmpercharge:0,totalfreightamt:0,totaladvance:0,totaldiscount:0,netamount:0,paymentstatus:"",receiptnumber:"",leakage:"",cancatload:""};
+		  }else if(currEvent =="manPowerView"){
+			  $('#manPowerBilling').hide();
+			  $('#manPowerView').show();
+			  $('#manPowerView').addClass("active");
+			  $('#CustomerInvoice').hide();
+			  $('#VendorInvoice').hide();
+			  $('#customerView').hide();
+			  $('#vendorView').hide();
+			  $scope.initmpcustList();
+			  $scope.initmpvenList();
+			  //$scope.getCustVenListmanPower();
+			  //$scope.getItem();
+			 //$scope.grandTotalList={totaltrip:"",customername:"",invoiceNo:"",truckno:"",trucktype:"",totalkm:0,totalcase:0,totalkmpercharge:0,totalfreightamt:0,totaladvance:0,totaldiscount:0,netamount:0,paymentstatus:"",receiptnumber:"",leakage:"",cancatload:""};
 		  }else{
 			  $('#vendorView').show();
 			  $('#vendorView').addClass("active");
