--- a/springboot-crud-rest-app/src/main/resources/public/vendor.html
+++ b/springboot-crud-rest-app/src/main/resources/public/vendor.html
@@ -161,7 +161,7 @@
 				<textarea rows = "1" cols = "22" name = "description" ng-model="vendorDetail.vendoraddr" placeholder="Enter your Addr"> </textarea>
               </td>
               <td colspan="1">
-                <input type='text' list="datavendorstate" ng-model="vendorDetail.state" placeholder="State" />
+                <input type='text' list="datavendorstate" ng-model="vendorDetail.state" ng-blur="getstateValid(vendorDetail.state,$event)" placeholder="State" />
                 <datalist id="datavendorstate" >
 				  <option ng-repeat="state in listvenStateJson" value="{{state.statename}}">{{state.statename}}</option> 
 				</datalist>
@@ -244,7 +244,7 @@
         <tr >
          	<td colspan="1">
               <!-- <input type="text" ng-model="vendorVehicle.fcdate" placeholder="FC Date"/> -->
-              <div class="input-group date" id="datetimepicker_fc" data-target-input="nearest"  style="width: 100%;" initial-date>
+              <div class="input-group date" data-date-format="YYYY-MM-DD" id="datetimepicker_fc" data-target-input="nearest"  style="width: 100%;" initial-date>
                     <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker_fc" ng-model="vendorVehicle.fcdate" placeholder="FC Date"/>
                     <div class="input-group-append" data-target="#datetimepicker_fc" data-toggle="datetimepicker">
                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
@@ -253,7 +253,7 @@
               </td>
               <td colspan="1">
               <!-- <input type="text" ng-model="vendorVehicle.insurancedate" placeholder="Insurance Date"/> -->
-              <div class="input-group date" id="datetimepicker_ins" data-target-input="nearest" style="width: 100%;">
+              <div class="input-group date" data-date-format="YYYY-MM-DD" id="datetimepicker_ins" data-target-input="nearest" style="width: 100%;">
                     <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker_ins" ng-model="vendorVehicle.insurancedate" placeholder="Insurance Date"/>
                     <div class="input-group-append" data-target="#datetimepicker_ins" data-toggle="datetimepicker">
                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
