--- a/springboot-crud-rest-app/src/main/resources/public/billing.html
+++ b/springboot-crud-rest-app/src/main/resources/public/billing.html
@@ -633,7 +633,7 @@
 <input type="text" list="dataListstate" ng-model="manpowerBilling.customerstate" class="form-control"  disabled/>  
  <datalist id="dataListstate" >
   <option ng-repeat="b in custAddr" value="{{b.state}}" >{{b.state}}</option> 
-  <option ng-repeat="b in custAddr" value="{{b.state}}" >{{b.state}}</option> 
+  <!-- <option ng-repeat="b in custAddr" value="{{b.state}}" >{{b.state}}</option>  -->
 <!-- <option ng-repeat="b in trucknoJson" value="{{b.vehicleNo}}"></option> -->
 </datalist>
 
