--- a/springboot-crud-rest-app/src/main/resources/public/customer.html
+++ b/springboot-crud-rest-app/src/main/resources/public/customer.html
@@ -222,10 +222,15 @@
 				<textarea rows = "1" cols = "22" name = "description" ng-model="customerDetail.customerAddr" placeholder="Enter your Addr"> </textarea>
               </td>
                <td colspan="1">
-                <input type='text' class="statevalidation" list="datastate" ng-model="customerDetail.state" ng-blur="getValid(customerDetail.state,$index)" placeholder="State"/>
+                <!-- <input type='text' class="statevalidation" list="datastate" ng-model="customerDetail.state" ng-blur="getValid(customerDetail.state,$index)" placeholder="State"/>
                 <datalist id="datastate" >
 				  <option ng-repeat="state in listStateJson" value="{{state.statename}}">{{state.statename}}</option> 
-				</datalist>
+				</datalist> -->
+				<select   ng-model="customerDetail.state" class="form-control"  >
+				<option value="" selected>Select Customer</option>
+				<option ng-repeat="state in listStateJson" value="{{state.statename}}">{{state.statename}}</option>
+			  
+			  </select> 
               </td>
               <td colspan="1">
                 <input type='text' ng-model="customerDetail.mobileNo" placeholder="MobileNo" numeric-regex/>
